# divvy_bike_trip_data

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: dbt_dag.py  dbt_docs_dag.py  dbt_docs_generate_dag.py  pipeline_dag.py  remove_local_files_dag.py
dags/include/: core.py  tasks.py
dbt/: dbt_project.yml
dbt/models/core/: dim_date.sql  dim_end_station.sql  dim_ended_at_date.sql  dim_ended_at_time_of_day.sql  dim_rent_type.sql  dim_rideable_type.sql  dim_start_station.sql  dim_started_at_date.sql  dim_started_at_time_of_day.sql  dim_station.sql  dim_time_of_day.sql  fct_rides.sql  schema.yml
dbt/models/staging/: src.yml  stg.yml  stg_rides.sql
dbt/tests/: fct_rides_no_negative_or_zero_duration.sql
init_scripts/init_airflow/: init_connections.sql
init_scripts/init_dwh/: init_dwh_schema.sql
init_scripts/init_metabase/: 01_core_user.sql  02_user_permissions.sql  03_setting.sql  04_metabase_database.sql  05_metabase_config.sql  06_metabase_update_seq_ids.sql
