[tool.poetry]
name = "divvy-bike-trip-data"
version = "0.1.0"
description = ""
authors = ["Paweł Brodowski"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow-providers-snowflake = "^5.5.0"
apache-airflow-providers-postgres = "^5.11.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
